--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
   ],
   "dependencies": {
     "@blueprintjs/core": "^3.23.1",
+    "@reduxjs/toolkit": "^1.2.4",
     "@welldone-software/why-did-you-render": "^4.0.3",
     "axios": "^0.19.2",
     "chalk": "^3.0.0",
@@ -42,8 +43,10 @@
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
+    "react-redux": "^7.1.3",
     "react-scripts": "^3.3.1",
     "react-split-pane": "^0.1.89",
+    "redux": "^4.0.5",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.0",
     "uuid": "^3.4.0",
