--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "react-scripts": "^3.3.1",
     "react-split-pane": "^0.1.89",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.0",
     "uuid": "^3.4.0",
@@ -65,6 +66,7 @@
     "@types/react": "^16.9.19",
     "@types/react-beautiful-dnd": "^11.0.2",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^4.4.2",
     "cross-env": "^7.0.0",
     "cypress": "^3.8.3",
