--- a/ui/package.json
+++ b/ui/package.json
@@ -43,8 +43,10 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-scripts": "^3.3.1",
+    "react-split": "^2.0.7",
     "react-split-pane": "^0.1.89",
     "socket.io-client": "^2.3.0",
+    "split.js": "^1.5.11",
     "styled-components": "^5.0.1",
     "uuid": "^3.4.0",
     "xterm": "^4.4.0",
