--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-scripts": "^3.3.1",
+    "react-spaces": "^0.1.24",
     "react-split": "^2.0.7",
     "react-split-pane": "^0.1.89",
     "socket.io-client": "^2.3.0",
